Update repo to support running mainnet and testnet indexers on the same server

--- a/mainnet-agent-database.yml
+++ b/mainnet-agent-database.yml
@@ -24,14 +24,14 @@ services:
 
 
   postgres-mainnet-agent:
-    image: postgres:14.5
+    image: postgres:15.1
     container_name: postgres-mainnet-agent
     command: ["postgres", "-c", "shared_preload_libraries=pg_stat_statements"]
     restart: unless-stopped
     environment:
       POSTGRES_USER: ${DB_USER:-graph-node}
       POSTGRES_PASSWORD: ${DB_PASS:-db-password}
-      POSTGRES_DB: ${AGENT_DB_NAME_TESTNET:-indexer-agent}
+      POSTGRES_DB: ${INDEXER_DB_NAME_MAINNET:-indexer-agent-mainnet}
     volumes:
       - postgres_mainnet_agent_data:/var/lib/postgresql/data
     networks:
