--- a/base.yml
+++ b/base.yml
@@ -52,6 +52,7 @@ services:
       - monitor-net
     labels:
       - "traefik.enable=true"
+    logging: *default-logging
       
 
   
@@ -61,8 +62,10 @@ services:
 
 
   index-node-0:
-    image: ${GRAPH_NODE_VERSION:-graphprotocol/graph-node:v0.28.2}
+    image: ${GRAPH_NODE_VERSION:-graphprotocol/graph-node:v0.29.0}
     container_name: index-node-0
+    depends_on:
+      - postgres
     volumes:
       - ./graph-node-configs:/root/graph-node-configs/
     environment:
