--- a/database.yml
+++ b/database.yml
@@ -33,6 +33,7 @@ services:
       POSTGRES_DB: ${GRAPH_NODE_DB_NAME:-graph-node}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./postgres-socket:/var/run/postgresql
     networks:
       - monitor-net
     expose:
