--- a/testnet.yml
+++ b/testnet.yml
@@ -68,9 +68,6 @@ services:
       #INDEXER_SERVICE_VECTOR_ROUTER: "vector8BSZxfkr62As6KZX2so4yXuex5XcpPXQ2tYZrBqpub94dAobu7"
       INDEXER_SERVICE_CLIENT_SIGNER_ADDRESS: "0xe1EC4339019eC9628438F8755f847e3023e4ff9c"
       SKIP_EVM_VALIDATION: "true"
-      # VIRTUAL_HOST: ${INDEX_HOST_TESTNET}
-      # VIRTUAL_PORT: 7600
-      # LETSENCRYPT_HOST: ${INDEX_HOST_TESTNET}
     expose:
       - 7300
       - 7600
@@ -132,8 +129,12 @@ services:
       INDEXER_AGENT_INDEXER_ADDRESS: ${STAKING_WALLET_ADDRESS_TESTNET}
       INDEXER_AGENT_INDEX_NODE_IDS: "index_node_0"
       INDEXER_AGENT_INJECT_DAI: "true"
-      INDEXER_AGENT_ALLOCATION_CLAIM_THRESHOLD: ${QUERY_FEE_REBATE_CLAIM_THRESHOLD_TESTNET:-0}
-      INDEXER_AGENT_REBATE_CLAIM_BATCH_THRESHOLD: ${REBATE_CLAIM_BATCH_THRESHOLD_TESTNET:-0}
+      INDEXER_AGENT_REBATE_CLAIM_TRESHOLD: ${REBATE_CLAIM_TRESHOLD:-200}
+      INDEXER_AGENT_REBATE_CLAIM_BATCH_THRESHOLD: ${REBATE_CLAIM_BATCH_THRESHOLD:-2000}
+      INDEXER_AGENT_REBATE_CLAIM_MAX_BATCH_SIZE: ${REBATE_CLAIM_MAX_BATCH_SIZE:-100}
+      INDEXER_AGENT_VOUCHER_REDEMPTION_THRESHOLD: ${VOUCHER_REDEMPTION_THRESHOLD:-200}
+      INDEXER_AGENT_VOUCHER_REDEMPTION_BATCH_THRESHOLD: ${VOUCHER_REDEMPTION_BATCH_THRESHOLD:-2000}
+      INDEXER_AGENT_VOUCHER_REDEMPTION_MAX_BATCH_SIZE: ${VOUCHER_REDEMPTION_MAX_BATCH_SIZE:-100}
       INDEXER_AGENT_ETHEREUM_NETWORK: goerli
       INDEXER_AGENT_ETHEREUM: ${TXN_RPC_TESTNET}
       INDEXER_AGENT_GRAPH_NODE_QUERY_ENDPOINT: http://query-node-1:8000
@@ -174,7 +175,8 @@ services:
     depends_on:
       - postgres
     volumes:
-      - ./graph-node-configs:/root/graph-node-configs/
+      - ./graph-node-configs/config.toml:/root/graph-node-configs/config.toml
+      - ./postgres-socket:/var/run/postgresql
     environment:
       GRAPH_NODE_CONFIG: /root/graph-node-configs/config.toml
       postgres_host: ${DB_HOST:-postgres}
@@ -193,7 +195,7 @@ services:
       EXPERIMENTAL_SUBGRAPH_VERSION_SWITCHING_MODE: synced
       GRAPH_KILL_IF_UNRESPONSIVE: "true"
       GRAPH_LOG_QUERY_TIMING: ${GRAPH_LOG_QUERY_TIMING:-gql}
-      GRAPH_ALLOW_NON_DETERMINISTIC_FULLTEXT_SEARCH: ${FULLTEXT_SEARCH:-true}
+      GRAPH_ALLOW_NON_DETERMINISTIC_FULLTEXT_SEARCH: ${FULLTEXT_SEARCH:-false}
       #VIRTUAL_HOST: ${QUERY_HOST_TESTNET}
       #VIRTUAL_PORT: 8000
       #LETSENCRYPT_HOST: ${QUERY_HOST_TESTNET}
@@ -264,7 +266,7 @@ services:
       - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
       - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
       - GF_USERS_ALLOW_SIGN_UP=false
-      - GF_SECURITY_DISABLE_BRUTE_FORCE_LOGIN_PROTECTION=tru
+      - GF_SECURITY_DISABLE_BRUTE_FORCE_LOGIN_PROTECTION=true
       - GF_SERVER_ROOT_URL=https://${DOMAIN}/grafana-testnet
       - postgres_host=${DB_HOST:-postgres}
       - postgres_user=${DB_USER:-graph-node}
