--- a/prometheus_mainnet/prometheus.yml
+++ b/prometheus_mainnet/prometheus.yml
@@ -49,10 +49,10 @@ scrape_configs:
     static_configs:
       - targets: ['indexer-service-mainnet:7300']
 
-  - job_name: 'grafana'
+  - job_name: 'grafana-mainnet'
     scrape_interval: 5s
     static_configs:
-      - targets: ['grafana:3000']
+      - targets: ['grafana-mainnet:3000']
 
 alerting:
   alertmanagers:
