--- a/prometheus_testnet/prometheus.yml
+++ b/prometheus_testnet/prometheus.yml
@@ -49,10 +49,10 @@ scrape_configs:
     static_configs:
       - targets: ['indexer-service-testnet:7300']
 
-  - job_name: 'grafana'
+  - job_name: 'grafana-testnet'
     scrape_interval: 5s
     static_configs:
-      - targets: ['grafana:3000']
+      - targets: ['grafana-testnet:3000']
 
 alerting:
   alertmanagers:
