--- a/mainnet.yml
+++ b/mainnet.yml
@@ -8,8 +8,8 @@ x-logging:
   driver: local
 
 networks:
-  monitor-net:
-    driver: bridge
+  graph_net:
+    name: graph_net
 
 volumes:
     prometheus_data_mainnet: {}
@@ -32,7 +32,7 @@ services:
       GEO_COORDINATES: ${GEO_COORDINATES:-69.42069 69.42069}
     tty: true
     networks:
-      - monitor-net
+      - graph_net
     logging: *default-logging
     volumes:
       - ./cli/scripts:/home/graph/scripts
@@ -72,7 +72,7 @@ services:
       - 7300
       - 7600
     networks:
-      - monitor-net
+      - graph_net
     restart: unless-stopped
     logging: *default-logging
     labels:
@@ -106,7 +106,7 @@ services:
       - '--indexer-agent-epoch-subgraph-endpoint=${INDEXER_AGENT_EPOCH_SUBGRAPH_ENDPOINT_MAINNET:-https://api.thegraph.com/subgraphs/name/graphprotocol/mainnet-epoch-block-oracle}'
     tty: true
     networks:
-       - monitor-net
+       - graph_net
     restart: unless-stopped
     logging: *default-logging
 
@@ -162,7 +162,7 @@ services:
       INDEXER_AGENT_OFFCHAIN_SUBGRAPHS: ${INDEXER_AGENT_OFFCHAIN_SUBGRAPHS}
       INDEXER_AGENT_GAS_PRICE_MAX: ${INDEXER_AGENT_GAS_PRICE_MAX_MAINNET:-50}
     networks:
-      - monitor-net
+      - graph_net
     restart: unless-stopped
     logging: *default-logging
 
@@ -212,7 +212,7 @@ services:
       - 8030
       - 8040
     networks:
-      - monitor-net
+      - graph_net
 
       
 
@@ -238,7 +238,7 @@ services:
     expose:
       - 9090
     networks:
-      - monitor-net
+      - graph_net
     labels:
       - "org.label-schema.group=monitoring"
       - "traefik.enable=true"
@@ -282,7 +282,7 @@ services:
     expose:
       - 3000
     networks:
-      - monitor-net
+      - graph_net
     labels:
       - "org.label-schema.group=monitoring"
       - "traefik.enable=true"
