Add access logs to monitor http errors

--- a/proxy.yml
+++ b/proxy.yml
@@ -40,6 +40,14 @@ services:
       - "--api.dashboard=false"
       - "--log.level=DEBUG"
       - "--log.format=json"
+      - "--accesslog=true"
+      - "--accesslog.format=json"
+      - "--accesslog.filters.statuscodes=300-600"
+      - "--accesslog.fields.defaultmode=drop"
+      - "--accesslog.fields.names.ClientAddr=keep"
+      - "--accesslog.fields.names.DownstreamStatus=keep"
+      - "--accesslog.fields.names.RequestMethod=keep"
+      - "--accesslog.fields.names.RequestPath=keep"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--providers.file.directory=/custom"
