Add free query token

--- a/mainnet.yml
+++ b/mainnet.yml
@@ -56,6 +56,7 @@ services:
       - query-node-0
       - postgres-mainnet-agent
     environment:
+      INDEXER_SERVICE_FREE_QUERY_AUTH_TOKEN: ${FREE_QUERY_AUTH_TOKEN}
       INDEXER_SERVICE_MNEMONIC: ${OPERATOR_SEED_PHRASE_MAINNET}
       INDEXER_SERVICE_INDEXER_ADDRESS: ${STAKING_WALLET_ADDRESS_MAINNET}
       INDEXER_SERVICE_PORT: 7600
