--- a/testnet.yml
+++ b/testnet.yml
@@ -56,6 +56,7 @@ services:
       - query-node-1
       - postgres-testnet-agent
     environment:
+      INDEXER_SERVICE_FREE_QUERY_AUTH_TOKEN: ${FREE_QUERY_AUTH_TOKEN}
       INDEXER_SERVICE_MNEMONIC: ${OPERATOR_SEED_PHRASE_TESTNET}
       INDEXER_SERVICE_INDEXER_ADDRESS: ${STAKING_WALLET_ADDRESS_TESTNET}
       INDEXER_SERVICE_PORT: 7600
