update initial state of GRAPH_ALLOW_NON_DETERMINISTIC_FULLTEXT_SEARCH

--- a/mainnet.yml
+++ b/mainnet.yml
@@ -207,7 +207,7 @@ services:
       EXPERIMENTAL_SUBGRAPH_VERSION_SWITCHING_MODE: synced
       GRAPH_KILL_IF_UNRESPONSIVE: "true"
       GRAPH_LOG_QUERY_TIMING: ${GRAPH_LOG_QUERY_TIMING:-gql}
-      GRAPH_ALLOW_NON_DETERMINISTIC_FULLTEXT_SEARCH: ${FULLTEXT_SEARCH:-false}
+      GRAPH_ALLOW_NON_DETERMINISTIC_FULLTEXT_SEARCH: ${FULLTEXT_SEARCH:-true}
       #VIRTUAL_HOST: ${QUERY_HOST_MAINNET}
       #VIRTUAL_PORT: 8000
       #LETSENCRYPT_HOST: ${QUERY_HOST_MAINNET}
