--- a/base.yml
+++ b/base.yml
@@ -54,6 +54,7 @@ services:
       GRAPH_ALLOW_NON_DETERMINISTIC_FULLTEXT_SEARCH: ${FULLTEXT_SEARCH:-true}
       GRAPH_ALLOW_NON_DETERMINISTIC_IPFS: ${GRAPH_ALLOW_NON_DETERMINISTIC_IPFS:-false}
       EXPERIMENTAL_SUBGRAPH_VERSION_SWITCHING_MODE: synced
+      ETHEREUM_POLLING_INTERVAL: ${RPC_POLLING_RATE:-500}
     restart: unless-stopped
     expose:
       - 8001
